# haskell-examples

./: .gitignore  00_Extensions  README.md  package.yaml  stack.yaml
01_Eta/: Main.hs
Control/Alerm/: Main.hs
Control/Applicative/: Alternative.hs  ReaderApplicative.hs  proof_of_my_applicative_datatype.lhs
Control/Arrow/: Main.hs
Control/Category/: NonDet.hs  NonDetCategory.hs  NonDetPlain.hs  Possible.hs
Control/Concurrent/: threadDelay.hs
Control/Eff/: Main.hs  SetMember.hs  bulk_out_effects.hs  partial_context.hs  variant_context.hs
Control/Error/: EitherT.hs
Control/Exception/: MyException.hs  catch.hs
Control/Lens/: ed.hs
Control/Monad/: Identity.hs  MonadPlus.hs  Reader.hs  Writer.hs  gtgt.hs  liftM.hs
Control/Spoon/: spoon.hs
Control/Zipper/: Main.hs
Data/: Map.hs  Set.hs
Data/Aeson/: JSON.hs
Data/Attoparsec/: Main.hs  (+1 more)
EXTENDED/: ExistentialQuantification.hs  GADTs.hs  TypeFamilies.hs
HobbyRoom/: StateT_foo.hs  State_foo.hs
LANGUAGE_EXTENSION/: MultiParamTypeClasses.hs  TypeSynonymInstances.hs
Labo/TunePoker/: LICENSE  TunePoker.cabal
Labo/TunePoker/app/: Main.hs
Labo/TunePoker/src/: Cards.hs  Hands.hs  Lib.hs
Labo/TunePoker/test/: Spec.hs
Network/: SocketClient.hs  SocketServer.hs
Prelude/: ListFunctor.hs  Maybe.hs  RecordSyntax.hs  SerializeToFile.hs  Tuple.hs  and.hs  lex.hs
Room/: MinimumMonadImpl.hs  MonoidLifting.hs  MonoidMorph.hs  MuseMember.hs  Zundoko.hs  implicit_partial_func_to_Partial.hs
Safe/: Main.hs
Shelly/: git_log_head.hs  hello_shelly.hs
System/: getEnvironment.hs
TextShow/: Main.hs
(+278 files in other folders)
